#40 Employeecontract dailyWorkingTimeMinutes, overtimeStaticMinutes -> Duration